--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p>On the bike, a magnetic reed switch senses a magnetic field; when a magnet passes by, it is triggered. The time in between revolutions is measured and converted into MPH. </p>
 
-<p><img src="images/processinggraph.png" alt="A graph of incoming speed data. "></p>
+<p><img src="images/processinggraph.png" alt="A graph of incoming speed data." /></p>
 
 <h3>Authors and Contributors</h3>
 
