--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 
 <p>On the bike, a magnetic reed switch senses a magnetic field; when a magnet passes by, it is triggered. The time in between revolutions is measured and converted into MPH. </p>
 
-<p><img src="images/processinggraph.png" alt="A graph of incoming speed data." /></p>
-<p><img src="images/step1.JPG" alt="The initial setup of the tin." /></p>
+<p><img src="images/processinggraph.png"/> alt="A graph of incoming speed data." </p>
+<p><img src="images/step1.JPG"/> alt="The initial setup of the tin." </p>
+<p><img src="images/step2.JPG"/> alt="The initial setup of the tin." </p>
+<p><img src="images/step3.JPG"/> alt="The initial setup of the tin." </p>
+<p><img src="images/step4.JPG"/> alt="The initial setup of the tin." </p>
+<p><img src="images/step5.JPG"/> alt="The initial setup of the tin." </p>
 
 <h3>Authors and Contributors</h3>
 
