--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
 <p>On the bike, a magnetic reed switch senses a magnetic field; when a magnet passes by, it is triggered. The time in between revolutions is measured and converted into MPH. </p>
 
-<p><img src="images/processinggraph.png"/> alt="A graph of incoming speed data." </p>
-<p><img src="images/step1.JPG"/> alt="The initial setup of the tin." </p>
-<p><img src="images/step2.JPG"/> alt="The initial setup of the tin." </p>
-<p><img src="images/step3.JPG"/> alt="The initial setup of the tin." </p>
-<p><img src="images/step4.JPG"/> alt="The initial setup of the tin." </p>
-<p><img src="images/step5.JPG"/> alt="The initial setup of the tin." </p>
+<p><img src="images/processinggraph.png"/> A graph of incoming speed data. </p>
+<p><img src="images/step1.JPG"/> The initial setup of the tin. </p>
+<p><img src="images/step2.JPG"/> The beginning screen of the lcd, ready for wheel radius to be set. </p>
+<p><img src="images/step3.JPG"/> Above, the wheel radius-setting potentiometer and the lcd displaying speed. </p>
+<p><img src="images/step4.JPG"/> The final setup of the tin. </p>
+<p><img src="images/step5.JPG"/> To program, a FTDI friend was used. </p>
 
 <h3>Authors and Contributors</h3>
 
