--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p><img src="images/step3.JPG"/> Above, the wheel radius-setting potentiometer and the lcd displaying speed. </p>
 <p><img src="images/step4.JPG"/> The final setup of the tin. </p>
 <p><img src="images/step5.JPG"/> To program, a FTDI friend was used. </p>
-<p><img src="images/cyclocomputerschematic.png"/> 
+<p><img src="images/cyclocomputerschematic.png"/></p>
 
 <h3>Authors and Contributors</h3>
 
