--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <section id="main_content" class="inner">
         <h3>Welcome to Andrew M's Bike Cyclocomputer</h3>
 
-<p>This project is designed to accurately measure the speed of a moving bicycle, display this information to the rider on an LCD screen, and then transmit speed data back to a computer using  Xbee wireless modules. An LCD screen is wired to the boarduino; the Xbee RX pin is attached to the arduino's TX pin. On the bike wheel, a magnet is attached to a spoke. Nearby, a reed switch is stationary. The reed switch must be attached to either digital pin two or three to allow for an interrupt to be used.</p>
+<p>This project is designed to accurately measure the speed of a moving bicycle, display this information to the rider on an LCD screen, and then transmit speed data back to a computer using  XBee wireless modules. An LCD screen is wired to the boarduino; the XBee RX pin is attached to the Arduino's TX pin. On the bike wheel, a magnet is attached to a spoke. Nearby, a reed switch is stationary. The reed switch is monitored by an interrupt by the Arduino, permitting accurate, consistent readings.</p>
 
-<p>The processing sketch reads serial data from an xbee and graphs it by drawing lines. The processing sketch saves the data and transforms incoming speed data into a graph. </p>
+<p>The processing sketch reads serial data from an XBee and graphs it The processing sketch saves the data to a trip log on one's computer and transforms incoming speed data into a graph. </p>
 
-<p>On the bike, a magnetic reed switch senses a magnetic field; when a magnet passes by, it is triggered. The time in between revolutions is measured and converted into MPH. </p>
+<p>On the bike, when the magnetic reed switch senses a magnetic field, it is triggered, and its signal recorded by the Arduino. The time in between revolutions is measured and converted into MPH. </p>
 
 <p><img src="images/processinggraph.png"/> A graph of incoming speed data. </p>
 <p><img src="images/step1.JPG"/> The initial setup of the tin. </p>
