--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <p><img src="images/step4.JPG"/> The final setup of the tin. </p>
 <p><img src="images/step5.JPG"/> To program, a FTDI friend was used. </p>
 <p><img src="images/cyclocomputerschematic.png"/></p>
-
+<p> See the cyclocomputer in action here http://www.youtube.com/watch?list=UUxUp2lxSRLPpF4XUZ7UEa_Q&v=d17Kk4CXWds&feature=player_detailpage </p> 
+!
 <h3>Authors and Contributors</h3>
 
 <p>Created in June-July, 2012 by Andrew M. (<a href="https://github.com/bobulisk" class="user-mention">@bobulisk</a>).</p>
