--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 <p><img src="images/cyclocomputerschematic.png"/></p>
 <p> See the cyclocomputer in action here! </p> 
 <iframe width="560" height="315" src="http://www.youtube.com/embed/d17Kk4CXWds" frameborder="0" allowfullscreen></iframe>
+<p></P>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/52BeCpjEheU" frameborder="0" allowfullscreen></iframe>
 <h3>Authors and Contributors</h3>
 
 <p>Created in June-July, 2012 by Andrew M. (<a href="https://github.com/bobulisk" class="user-mention">@bobulisk</a>).</p>
