--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 <p>On the bike, when the magnetic reed switch senses a magnetic field, it is triggered, and its signal recorded by the Arduino. The time in between revolutions is measured and converted into MPH. </p>
 
-<p><img src="images/processinggraph.png"/> A graph of incoming speed data. </p>
-<p><img src="images/step1.JPG"/> The initial setup of the tin. </p>
+<p><a href="https://github.com/bobulisk/Bike-Cyclocomputer/blob/gh-pages/images/processinggraph.png"<img src="images/processinggraph.png"/></a> A graph of incoming speed data. </p>
+<p><a<img src="images/step1.JPG"/></a> The initial setup of the tin. </p>
 <p><img src="images/step2.JPG"/> The beginning screen of the lcd, ready for wheel radius to be set. </p>
 <p><img src="images/step3.JPG"/> Above, the wheel radius-setting potentiometer and the lcd displaying speed. </p>
 <p><img src="images/step4.JPG"/> The final setup of the tin. </p>
